infra/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress-traefik
  namespace: fleet-management
spec:
  ingressClassName: traefik
  rules:
    - host: api.fleet.local
      http:
        paths:
          - path: /api/vehicules
            pathType: Prefix
            backend:
              service:
                name: vehicule-service
                port:
                  number: 4000
          - path: /api/conducteurs
            pathType: Prefix
            backend:
              service:
                name: conducteur-service
                port:
                  number: 3000
          - path: /api/maintenance
            pathType: Prefix
            backend:
              service:
                name: maintenance-service
                port:
                  number: 8000
          - path: /api/evenements
            pathType: Prefix
            backend:
              service:
                name: evenement-service
                port:
                  number: 8000
          - path: /api/localisation
            pathType: Prefix
            backend:
              service:
                name: localisation-service
                port:
                  number: 50051
    - host: app.fleet.local
      http:
        paths:
          - path: /mf-vehicule
            pathType: Prefix
            backend:
              service:
                name: mf-vehicule
                port:
                  number: 80
          - path: /mf-conducteur
            pathType: Prefix
            backend:
              service:
                name: mf-conducteur
                port:
                  number: 80
          - path: /mf-maintenance
            pathType: Prefix
            backend:
              service:
                name: mf-maintenance
                port:
                  number: 80
          - path: /mf-localisation
            pathType: Prefix
            backend:
              service:
                name: mf-localisation
                port:
                  number: 80
          - path: /mf-evenement
            pathType: Prefix
            backend:
              service:
                name: mf-evenement
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-shell
                port:
                  number: 80
